Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7645

QProcess::startDetached cannot start process that requires elevated privileges in Windows Vista and 7

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.6.1
    • 4.5.1, 4.5.2, 4.5.3, 4.6.0, 4.6.1, 5.6.0
    • Core: I/O
    • ab83912c7900805987f7efe38cee2c60baf5f315 (qtbase/5.6, 23.4.2016, 5.6.1)

      It is impossible to start a process like application installer from Qt application using QProcess, if the process requires elevated privileges (UAC). To automatically update an application installed in e.g. Program Files, an application needs to use <windows.h> - code, or another application like cmd.exe.

        1. qtbug7645.zip
          3 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-7645
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            bigcat2009 Thomas M.
            Votes:
            10 Vote for this issue
            Watchers:
            13 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes